--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "chart.js": "^4.4.1",
     "d3": "^7.8.5",
     "papaparse": "^5.4.1",
+    "plotly.js": "^2.29.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-heatmap-grid": "^0.9.0",
-    "react-paginate": "^8.2.0"
+    "react-paginate": "^8.2.0",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
