--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "papaparse": "^5.4.1",
     "plotly.js": "^2.29.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-heatmap-grid": "^0.9.0",
