--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chart.js": "^4.4.1",
     "d3": "^7.8.5",
+    "firebase": "^10.9.0",
     "papaparse": "^5.4.1",
     "plotly.js": "^2.29.1",
     "react": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-heatmap-grid": "^0.9.0",
     "react-paginate": "^8.2.0",
-    "react-plotly.js": "^2.6.0"
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
